Add ranger hive IT

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -22,6 +22,10 @@ on:
         description: 'Docker tag to apply to this image'
         required: true
         type: string
+      environments:
+        description: 'Environments variables for the build image'
+        required: false
+        type: string
       token:
         description: 'Publish Docker token'
         required: true
@@ -93,4 +97,7 @@ jobs:
           distribution: 'temurin'
 
       - name: Build and Push the Docker image
-        run: sudo rm -rf /usr/local/lib/android && sudo rm -rf /opt/hostedtoolcache/CodeQL && ./dev/docker/build-docker.sh --platform all --type ${image_type} --image ${image_name} --tag ${{ github.event.inputs.tag }} --latest
+        run: | 
+          sudo rm -rf /usr/local/lib/android
+          sudo rm -rf /opt/hostedtoolcache/CodeQL
+          ${{ github.event.inputs.environments }} ./dev/docker/build-docker.sh --platform all --type ${image_type} --image ${image_name} --tag ${{ github.event.inputs.tag }} --latest
