--- a/dev/docker/hive/Dockerfile
+++ b/dev/docker/hive/Dockerfile
@@ -106,7 +106,7 @@ RUN echo "CLASSPATH=${CLASSPATH}" >> /etc/environment
 RUN echo "LD_LIBRARY_PATH=${LD_LIBRARY_PATH}" >> /etc/environment
 
 ################################################################################
-# install zoofkeeper
+# install zookeeper
 ADD packages/zookeeper-${ZOOKEEPER_VERSION}.tar.gz /opt/
 RUN ln -s /opt/zookeeper-${ZOOKEEPER_VERSION} ${ZK_HOME}
 RUN mkdir $ZK_HOME/data
