--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -44,6 +44,9 @@ jobs:
           if [ "${{ github.event.inputs.image }}" == "gravitino-ci-hive" ]; then
             echo "image_type=hive" >> $GITHUB_ENV
             echo "image_name=datastrato/gravitino-ci-hive" >> $GITHUB_ENV
+          elif [ "${{ github.event.inputs.image }}" == "gravitino-ci-hive3" ]; then
+            echo "image_type=hive3" >> $GITHUB_ENV
+            echo "image_name=datastrato/gravitino-ci-hive3" >> $GITHUB_ENV
           elif [ "${{ github.event.inputs.image }}" == "gravitino-ci-kerberos-hive" ]; then
             echo "image_type=kerberos-hive" >> $GITHUB_ENV
             echo "image_name=datastrato/gravitino-ci-kerberos-hive" >> $GITHUB_ENV
